--- a/workspace.html
+++ b/workspace.html
@@ -1,29 +1,168 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        html,
         body {
-            width: 400px;
-            min-height: 200px;
-            padding: 10px;
+            height: 100%;
+            width: 100%;
         }
-        .element {
-            border: 1px solid #ccc;
-            margin: 10px 0;
-            padding: 10px;
-            background: #f9f9f9;
+
+        body {
+            min-width: 300px;
+            min-height: 300px;
+            padding: 15px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #333;
+            display: flex;
+            flex-direction: column;
         }
-        pre {
+
+        .container {
+            background: rgba(255, 255, 255, 0.95);
+            border-radius: 12px;
+            padding: 20px;
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
+            backdrop-filter: blur(10px);
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            min-height: 0;
+        }
+
+        h3 {
+            color: #4a5568;
+            margin-bottom: 15px;
+            font-size: clamp(16px, 4vw, 20px);
+            text-align: center;
+            font-weight: 600;
+        }
+
+        .results-container {
+            border: 2px solid #e2e8f0;
+            border-radius: 8px;
+            background: #ffffff;
+            box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.05);
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            min-height: 0;
+        }
+
+        #results {
+            flex: 1;
+            min-height: 150px;
+            max-height: calc(100vh - 180px);
+            overflow-y: auto;
+            padding: 12px;
+            font-family: 'Consolas', 'Monaco', 'Courier New', monospace;
+            font-size: clamp(11px, 2.5vw, 13px);
+            line-height: 1.4;
             white-space: pre-wrap;
             word-wrap: break-word;
-            font-size: 12px;
+            background: #f8fafc;
+            border-radius: 6px;
+            margin: 0;
+        }
+
+        #results::-webkit-scrollbar {
+            width: 6px;
+        }
+
+        #results::-webkit-scrollbar-track {
+            background: #f1f1f1;
+            border-radius: 3px;
+        }
+
+        #results::-webkit-scrollbar-thumb {
+            background: #c5c5c5;
+            border-radius: 3px;
+        }
+
+        #results::-webkit-scrollbar-thumb:hover {
+            background: #a8a8a8;
+        }
+
+        .element {
+            border-left: 3px solid #667eea;
+            margin: 10px 0;
+            padding: 10px 12px;
+            background: #fff;
+            border-radius: 5px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+            transition: all 0.2s ease;
+        }
+
+        .element:hover {
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+            transform: translateY(-1px);
+        }
+
+        .element-header {
+            font-weight: bold;
+            color: #2d3748;
+            margin-bottom: 4px;
+            font-size: clamp(12px, 2.8vw, 14px);
+        }
+
+        .element-content {
+            color: #4a5568;
+            font-size: clamp(10px, 2.3vw, 12px);
+            line-height: 1.3;
+        }
+
+        /* Адаптивность для маленьких экранов */
+        @media (max-width: 400px) {
+            body {
+                padding: 10px;
+            }
+
+            .container {
+                padding: 15px;
+                border-radius: 8px;
+            }
+
+            h3 {
+                margin-bottom: 10px;
+            }
+
+            .element {
+                padding: 8px 10px;
+                margin: 8px 0;
+            }
+        }
+
+        @media (max-height: 400px) {
+            #results {
+                min-height: 100px;
+                max-height: calc(100vh - 150px);
+            }
         }
     </style>
 </head>
+
 <body>
-    <h3>Собранные элементы:</h3>
-    <div id="results"></div>
+    <div class="container">
+        <h3>Xpath</h3>
+
+        <div class="results-container">
+            <div id="results">
+                <div class="empty-state">Результаты появятся здесь...</div>
+            </div>
+        </div>
+
+    </div>
+
     <script src="popup.js"></script>
+
 </body>
+
 </html>
